<resources>
    <string name="app_name">NiceStart</string>
    <string name="btn_login_login">Login</string>
    <string name="btn_login_singup">Sing up</string>
    <string name="et_login_password">Password</string>
    <string name="et_login_user">Username</string>
    <string name="et_singup_passwordconfirm">Confirm password</string>
    <string name="btn_singup_confirm">Confirm</string>
    <string name="btn_singup_cancel">Cancel</string>
</resources>